--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 .idea/**/dictionaries
 .idea/**/shelf
 WORKING.md
+/backend/main/resources/application.properties
+
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -350,3 +352,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,intellij,intellij+all,intellij+iml,linux,windows,macos
+
