--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "proxy": "http://localhost:9000",
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0-alpha3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
