--- a/backend/main/resources/application.yml
+++ b/backend/main/resources/application.yml
@@ -7,19 +7,19 @@ datasets:
       content: vacuum
       label: GREEN
       done: true
-      modified: 2023-04-01T12:53:00.599125
+      modifiedLong: 2023-04-01T12:53:00.599125
     - id: 2
       content: buy grocery
       label: YELLOW
       done: false
-      modified: 2023-04-30T07:21:15.599125
+      modifiedLong: 2023-04-30T07:21:15.599125
     - id: 3
       content: pay bills
       label: RED
       done: false
-      modified: 2023-04-20T17:26:15.599125
+      modifiedLong: 2023-04-20T17:26:15.599125
     - id: 4
       content: wash car
       label: YELLOW
       done: false
-      modified: 2023-04-29T20:10:17.599125
+      modifiedLong: 2023-04-29T20:10:17.599125
