--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <groupId>com.codecool</groupId>
     <artifactId>note-it</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>note-it</name>
     <description>Note taking app: frontend with React.js, backend with Spring Boot</description>
 
@@ -90,24 +91,6 @@
             <artifactId>httpclient5</artifactId>
             <version>5.2.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.3.1</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
-        <dependency>
-            <groupId>org.skyscreamer</groupId>
-            <artifactId>jsonassert</artifactId>
-            <version>1.5.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <version>2.8.0</version>
         </dependency>
 
     </dependencies>
