--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,intellij,intellij+all,intellij+iml,linux,windows,macos
+/target/
+/src/main/resources/application.properties
