--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,41 +1,41 @@
 app:
   loadDefaultDataset: true
-  loadDefaultUsers: false
+  loadDefaultUsers: true
 
 datasets:
   notes:
-    - id: 1
+    -
       content: vacuum
       label: GREEN
       done: true
-      modifiedLong: 2023-04-01T12:53:00.599125
-    - id: 2
+      modifiedLong: 2022-11-25T12:53:00.599125
+    -
       content: buy grocery
       label: YELLOW
       done: false
       modifiedLong: 2023-04-30T07:21:15.599125
-    - id: 3
+    -
       content: pay bills
       label: RED
       done: false
       modifiedLong: 2023-04-20T17:26:15.599125
-    - id: 4
+    -
       content: wash car
       label: YELLOW
       done: false
-      modifiedLong: 2023-04-29T20:10:17.599125
+      modifiedLong: 2023-05-29T20:10:17.599125
 
 defaultusers:
   admins:
     -
       email: admin@gmail.com
       password: Admin!111
-      roles:
+      authorities:
         - ADMIN
         - USER
   users:
     -
       email: user@gmail.com
       password: User!111
-      roles:
+      authorities:
         - USER
